# hiclaw

./: .gitattributes  .gitignore  .windsurfrules  AGENTS.md  BUGFIX_REPORT.md  Makefile  README.ja-JP.md  README.md  README.zh-CN.md
blog/: hiclaw-1.0.4-release.md  hiclaw-announcement.md
changelog/: current.md  v1.1.1.md
copaw/: pyproject.toml
copaw/agent/skills/file-sync/: SKILL.md
copaw/agent/skills/file-sync/scripts/: copaw-sync.py
copaw/scripts/: copaw-worker-entrypoint.sh
copaw/src/copaw_worker/: bridge.py  cli.py  config.py  matrix_channel.py  sync.py  worker.py
copaw/src/copaw_worker/hooks/tools/: message.py
copaw/src/copaw_worker/templates/: agent.manager.json  agent.worker.json
copaw/src/matrix/: channel.py  config.py
copaw/src/providers/: __init__.py  health.py  models.py
copaw/tests/: test_channel_mention.py  test_message_tool.py  test_worker_sync.py
docs/: architecture.md  cms-integration.md  declarative-resource-management.md  development.md  faq-legacy.md  faq.md  harness-worker.md  import-worker.md  k8s-native-agent-orch.md  manager-guide.md  quickstart.md  windows-deploy.md  worker-guide.md
harness/: Dockerfile  README.md  pyproject.toml
harness/scripts/: harness-worker-entrypoint.sh
harness/src/harness_worker/: __init__.py  bridge.py  cli.py  config.py  matrix_relay.py  policies.py  sync.py  worker.py
harness/src/harness_worker/harness/: __init__.py  base.py  claude.py  codex.py  gemini.py  opencode.py
harness/src/harness_worker/templates/: claude.settings.json  codex.config.toml  gemini.settings.json  opencode.json
(+210 files in other folders)
