[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "copaw-worker"
version = "0.1.0"
description = "Lightweight HiClaw Worker runtime based on CoPaw"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "copaw>=0.0.5",
    "matrix-nio>=0.24.0",
]

[project.scripts]
copaw-worker = "copaw_worker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
