[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harness-worker"
version = "0.1.0"
description = "Harness worker for HiClaw"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "httpx>=0.27",
    "nio>=0.24",
]

[project.scripts]
harness-worker = "harness_worker.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/harness_worker"]